# jornadadotestetecnico

./: README.md  pipeline.py  pyproject.toml  requirements.txt  vendas_cerveja.csv  vendas_cerveja.json
docs/: base.csv  base.json
jupyter/: explorar.ipynb
src/: README.md  main.py
